Revert "Ajout de la fonction annuler"

--- a/templates/event/cancel.html.twig
+++ b/templates/event/cancel.html.twig
@@ -5,12 +5,13 @@
 {% block body %}
     <h1>Annuler une sortie</h1>
 
-    <div class="alert alert-warning">
-        Attention : cette action est définitive.
-    </div>
 
     <div class="container">
-        <h1>Sortie : {{ event.name }}</h1>
+        <h1>Annuler la sortie : {{ event.name }}</h1>
+
+        <div class="alert alert-warning">
+            Attention : cette action est définitive.
+        </div>
 
 
     </div>
